--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express-session": "^1.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.18.1",
+    "pdfkit": "^0.17.2",
     "uuid": "^13.0.0"
   },
   "devDependencies": {
