--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.18.1",
     "pdfkit": "^0.17.2",
+    "slugify": "^1.6.6",
     "uuid": "^13.0.0"
   },
   "devDependencies": {
